--- a/style2.css
+++ b/style2.css
@@ -9,242 +9,245 @@
   color: #d1d5db;
 }
 
-body {
-  background-image: url("img/Background-unsplash.jpg");
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  padding: 30px 0 30px 0;
-  box-sizing: border-box;
-}
-#shade-img {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.603);
-}
+@media (min-width: 1000px) {
+  body {
+    background-image: url("img/Background-unsplash.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0 30px 0;
+    box-sizing: border-box;
+  }
+  #shade-img {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.603);
+  }
 
-#container {
-  position: absolute;
-  width: 90%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  border-radius: 20px;
-  box-shadow: -20px 0 20px rgba(0, 0, 0, 0.281);
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-}
-#search-options {
-  width: 20%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0);
-  border-radius: 20px;
-  border-right: 1px solid rgba(203, 203, 203, 0.638);
-  backdrop-filter: blur(15px);
-  padding: 40px;
-  box-sizing: border-box;
-}
-#content {
-  width: 80%;
-  height: 100%;
-}
-#search-option-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-#search {
-  position: relative;
-  width: 100%;
-  height: 45px;
-  border-bottom: 1px solid #d1d5db;
-}
-#search-input {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border: none;
-  background-color: transparent;
-  outline: 0;
-  padding: 0 50px 0 50px;
-  color: #d1d5db;
-  font-size: 16px;
-}
-#search button {
-  position: absolute;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  font-size: 20px;
-  background-color: transparent;
-  outline: none;
-  border: 0;
-}
-#search i {
-  position: absolute;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  font-size: 20px;
-}
-#magnify {
-  right: 0;
-}
-#option {
-  width: 100%;
-  height: 100%;
-  padding-top: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-#option1 {
-  width: 100%;
-  height: 120px;
-  display: flex;
-  flex-direction: column;
-}
-#option1 :hover {
-  cursor: pointer;
-}
-#degs {
-  display: flex;
-  width: 100%;
-  height: 80%;
-  justify-content: space-between;
-}
-.degree {
-  position: relative;
-  font-size: 80px;
-}
-.degree span {
-  position: absolute;
-  right: -15px;
-  font-size: 30px;
-}
+  #container {
+    position: absolute;
+    width: 90%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    border-radius: 20px;
+    box-shadow: -20px 0 20px rgba(0, 0, 0, 0.281);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+  }
+  #search-options {
+    width: 20%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 20px;
+    border-right: 1px solid rgba(203, 203, 203, 0.638);
+    backdrop-filter: blur(15px);
+    padding: 40px;
+    box-sizing: border-box;
+  }
+  #content {
+    width: 80%;
+    height: 100%;
+  }
+  #search-option-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  #search {
+    position: relative;
+    width: 100%;
+    height: 45px;
+    border-bottom: 1px solid #d1d5db;
+  }
+  #search-input {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    outline: 0;
+    padding: 0 50px 0 50px;
+    color: #d1d5db;
+    font-size: 16px;
+  }
+  #search button {
+    position: absolute;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    font-size: 20px;
+    background-color: transparent;
+    outline: none;
+    border: 0;
+  }
+  #search i {
+    position: absolute;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    font-size: 20px;
+  }
+  #magnify {
+    right: 0;
+  }
+  #option {
+    width: 100%;
+    height: 100%;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  #option1 {
+    width: 100%;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+  }
+  #option1 :hover {
+    cursor: pointer;
+  }
+  #degs {
+    display: flex;
+    width: 100%;
+    height: 80%;
+    justify-content: space-between;
+  }
+  .degree {
+    position: relative;
+    font-size: 80px;
+  }
+  .degree span {
+    position: absolute;
+    right: -15px;
+    font-size: 30px;
+  }
 
-#high-low-div {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding: 10px 0 0 10px;
-}
-#high-low-div p {
-  font-size: 20px;
-}
-#high-low-div i {
-  margin-right: 10px;
-}
-.option-city {
-  width: 100%;
-  height: 20%;
-  font-size: 15px;
-}
+  #high-low-div {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 10px 0 0 10px;
+  }
+  #high-low-div p {
+    font-size: 20px;
+  }
+  #high-low-div i {
+    margin-right: 10px;
+  }
+  .option-city {
+    width: 100%;
+    height: 20%;
+    font-size: 15px;
+  }
 
-#temp-desc {
-  height: 60%;
-  width: 100%;
-  display: flex;
-}
+  #temp-desc {
+    height: 60%;
+    width: 100%;
+    display: flex;
+  }
 
-#temp-info {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding: 0 0 50px 110px;
-  box-sizing: border-box;
-}
-#temp {
-  font-size: 180px;
-  font-weight: bolder;
-  position: relative;
-}
-#temp span {
-  font-size: 60px;
-  font-weight: bolder;
-  position: absolute;
-}
-#desc {
-  font-size: 50px;
-  font-weight: 600;
-}
-#time-date {
-  width: 50%;
-  font-size: 40px;
-  padding: 110px 0 0 0;
-  box-sizing: border-box;
-}
-#city_name {
-  font-size: 50px;
-  font-weight: bolder;
-}
-#timedateP {
-  font-size: 40px;
-  padding: 0 0 0 100px;
-}
-#time-date span {
-  font-size: 20px;
-  padding-left: 5px;
-}
+  #temp-info {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 0 0 50px 110px;
+    box-sizing: border-box;
+  }
+  #temp {
+    font-size: 180px;
+    font-weight: bolder;
+    position: relative;
+  }
+  #temp span {
+    font-size: 60px;
+    font-weight: bolder;
+    position: absolute;
+  }
+  #desc {
+    font-size: 50px;
+    font-weight: 600;
+  }
+  #time-date {
+    width: 50%;
+    font-size: 40px;
+    padding: 110px 0 0 0;
+    box-sizing: border-box;
+  }
+  #city_name {
+    font-size: 50px;
+    font-weight: bolder;
+  }
+  #timedateP {
+    font-size: 40px;
+    padding: 0 0 0 100px;
+  }
+  #time-date span {
+    font-size: 20px;
+    padding-left: 5px;
+  }
 
-#hum-win-vis {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  height: 10%;
-}
-#future {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 30%;
-}
+  #hum-win-vis {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    height: 10%;
+  }
+  #future {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 30%;
+  }
 
-#hum-win-vis div {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
+  #hum-win-vis div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-#future div {
-  display: flex;
-  height: 100px;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-#future p {
-  font-size: 20px;
-  position: relative;
-}
-#future img {
-  width: 50px;
-  height: 50px;
-}
-#hum-win-vis p {
-  font-size: 20px;
-}
-#future span {
-  position: absolute;
-  font-size: 15px;
+  #future div {
+    display: flex;
+    height: 100px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #future p {
+    font-size: 20px;
+    position: relative;
+  }
+
+  #future img {
+    width: 50px;
+    height: 50px;
+  }
+  #hum-win-vis p {
+    font-size: 20px;
+  }
+  #future span {
+    position: absolute;
+    font-size: 15px;
+  }
 }
