--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
     background-attachment: fixed;
     width: 100%;
     height: 100%;
+  }
+  #bodyShade {
     display: flex;
     justify-content: center;
     box-sizing: border-box;
