--- a/style.css
+++ b/style.css
@@ -126,6 +126,13 @@
   #time-date {
     position: absolute;
     padding: 15px 0 0 20px;
+    width: 40%;
+  }
+  #timedateP {
+    width: 100%;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
   }
   #timedateP span {
     padding-left: 5px;
