--- a/style2.css
+++ b/style2.css
@@ -205,6 +205,10 @@
   #timedateP {
     font-size: 40px;
     padding: 0 0 0 100px;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+    width: 50%;
   }
   #time-date span {
     font-size: 20px;
